adicionado estilização na pagina

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register & Login</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
@@ -43,9 +44,38 @@
     </div>
     <div class="links">
         <p>Voce já tem uma conta?</p>
-        <button id="signInButton">Cadastre-se</button>
+        <button id="cadastre">Cadastre-se</button>
     </div>
 
-     <!-- Continuação: Criar a tela Sign in para login -->
+    <div class="container" id="sign">
+        <h1 class="form-title">Sign In</h1>
+        <form method="post" action=""></form>
+        <div class="input-group"></div>
+        <i class="fas fa-envelope"></i>
+        <input type="email" name="email" id="email" placeholder="E-mail" required>
+        <label for="email">Email</label>
+    </div>
+    <div class="input-group">
+        <i class="fas fa-lock"></i>
+        <input type="password" name="password" id="password" placeholder="Password">
+        <label for="password">Password</label>
+    </div>
+    <p class="recovery"> 
+        <a href="#">Esqueceu sua senha?</a>
+    </p>
+    <input type="submit" class="btn" value="sign in" name="signIn">
+    </form>
+    <p class="or">
+        --------------OR-------------
+    </p>
+    <div class="icons">
+        <i class="fab fa-google"></i>
+        <i class="fab fa-facebook"></i>
+    </div>
+    <div class="links">
+        <p>Não tem uma conta ainda?</p>
+        <button id="signUpButton">Sign Up</button>
+    </div>
+    
 </body>
 </html>
