--- a/index.html
+++ b/index.html
@@ -10,72 +10,69 @@
 </head>
 
 <body>
+    <!-- Container de Cadastro -->
     <div class="container" id="signup">
         <h1 class="form-title">Register</h1>
-        <form method="post" action=""></form>
-        <div class="input-group"></div>
-        <i class="fas fa-user"></i>
-        <input type="text" name="fName" id="fName" placeholder="Primeiro nome" required>
-        <label for="fName">Primeiro nome</label>
-    </div>
-    <div class="input-group">
-        <i class="fas fa-user"></i>
-        <input type="text" name="lName" id="lName" placeholder="Segundo nome" required>
-        <label for="lName">Segundo nome</label>
-    </div>
-    <div class="input-group">
-        <i class="fas fa-envelope"></i>
-        <input type="email" name="email" id="email" placeholder="E-mail" required>
-        <label for="email">Email</label>
-    </div>
-    <div class="input-group">
-        <i class="fas fa-lock"></i>
-        <input type="password" name="password" id="password" placeholder="Password">
-        <label for="password">Password</label>
-    </div>
-    <input type="submit" class="btn" value="sign up">
-    </form>
-    <p class="or">
-        --------------OR-------------
-    </p>
-    <div class="icons">
-        <i class="fab fa-google"></i>
-        <i class="fab fa-facebook"></i>
-    </div>
-    <div class="links">
-        <p>Voce já tem uma conta?</p>
-        <button id="cadastre">Cadastre-se</button>
+        <form method="post" action="">
+            <div class="input-group">
+                <i class="fas fa-user"></i>
+                <input type="text" name="fName" id="fName" placeholder="Primeiro nome" required>
+                <label for="fName">Primeiro nome</label>
+            </div>
+            <div class="input-group">
+                <i class="fas fa-user"></i>
+                <input type="text" name="lName" id="lName" placeholder="Segundo nome" required>
+                <label for="lName">Segundo nome</label>
+            </div>
+            <div class="input-group">
+                <i class="fas fa-envelope"></i>
+                <input type="email" name="email" id="email" placeholder="E-mail" required>
+                <label for="email">Email</label>
+            </div>
+            <div class="input-group">
+                <i class="fas fa-lock"></i>
+                <input type="password" name="password" id="password" placeholder="Password" required>
+                <label for="password">Password</label>
+            </div>
+            <input type="submit" class="btn" value="Sign Up">
+        </form>
+        <p class="or">--------------OR-------------</p>
+        <div class="icons">
+            <i class="fab fa-google"></i>
+            <i class="fab fa-facebook"></i>
+        </div>
     </div>
 
+    <!-- Container de Login -->
     <div class="container" id="sign">
+        <div class="links">
+            <p>Você já tem uma conta?</p>
+            <button id="cadastre">Faça Login</button>
+        </div>
         <h1 class="form-title">Sign In</h1>
-        <form method="post" action=""></form>
-        <div class="input-group"></div>
-        <i class="fas fa-envelope"></i>
-        <input type="email" name="email" id="email" placeholder="E-mail" required>
-        <label for="email">Email</label>
+        <form method="post" action="">
+            <div class="input-group">
+                <i class="fas fa-envelope"></i>
+                <input type="email" name="email" id="email" placeholder="E-mail" required>
+                <label for="email">Email</label>
+            </div>
+            <div class="input-group">
+                <i class="fas fa-lock"></i>
+                <input type="password" name="password" id="password" placeholder="Password" required>
+                <label for="password">Password</label>
+            </div>
+            <p class="recovery"><a href="#">Esqueceu sua senha?</a></p>
+            <input type="submit" class="btn" value="Sign In" name="signIn">
+        </form>
+        <p class="or">--------------OR-------------</p>
+        <div class="icons">
+            <i class="fab fa-google"></i>
+            <i class="fab fa-facebook"></i>
+        </div>
+        <div class="links">
+            <p>Não tem uma conta ainda?</p>
+            <button id="signUpButton">Sign Up</button>
+        </div>
     </div>
-    <div class="input-group">
-        <i class="fas fa-lock"></i>
-        <input type="password" name="password" id="password" placeholder="Password">
-        <label for="password">Password</label>
-    </div>
-    <p class="recovery"> 
-        <a href="#">Esqueceu sua senha?</a>
-    </p>
-    <input type="submit" class="btn" value="sign in" name="signIn">
-    </form>
-    <p class="or">
-        --------------OR-------------
-    </p>
-    <div class="icons">
-        <i class="fab fa-google"></i>
-        <i class="fab fa-facebook"></i>
-    </div>
-    <div class="links">
-        <p>Não tem uma conta ainda?</p>
-        <button id="signUpButton">Sign Up</button>
-    </div>
-    
 </body>
 </html>
