--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-    <!-- Container de Cadastro -->
     <div class="container" id="signup">
         <h1 class="form-title">Register</h1>
         <form method="post" action="">
@@ -35,13 +34,15 @@
                 <label for="password">Password</label>
             </div>
             <input type="submit" class="btn" value="Sign Up">
-        </form>
-        <p class="or">--------------OR-------------</p>
-        <div class="icons">
-            <i class="fab fa-google"></i>
-            <i class="fab fa-facebook"></i>
+            <p class="or">--------------OR-------------</p>
+            <div class="icons">
+                <i class="fab fa-google"></i>
+                <i class="fab fa-facebook"></i>
+            </div>
         </div>
+        </form>
     </div>
+
 
     <!-- Container de Login -->
     <div class="container" id="sign">
